# examples

cpp/mnist/: CMakeLists.txt  HelloWorld.cu  README.md  mnist.cpp
mnist/: main.py
word_language_model/: .main.py.swp  .model.py.swp  main.py  model.py  read.py  result  run.sh
